# AI-Qlearning-Training-Facility

./: .gitignore  AI-Qlearning-Training-Facility.sln  AI-Qlearning-Training-Facility.vcxproj  AI-Qlearning-Training-Facility.vcxproj.filters  AIPlayer.cpp  CMakeLists.txt  CombatState.h  Deck.h  Enemy.h  README.md  main.cpp  qtable.txt
src/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  Card.h  Combat.h  CombatState.h  Deck.h  Die.h  Enemy.h  main.cpp
